# k8s-qudittov2-deployment

./: .gitignore  README.md  quditto-node.yaml
docker-images/qnode-v2/: Dockerfile
docker-images/qorchestrator-v2/: Dockerfile
docs/: index.yaml  qcontroller-v2-0.1.0.tgz  qnode-v2-0.1.0.tgz  qorchestrator-v2-0.1.0.tgz
helm-charts/qcontroller-v2/: Chart.yaml  values.yaml
helm-charts/qcontroller-v2/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm-charts/qnode-v2/: Chart.yaml  values.yaml
helm-charts/qnode-v2/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm-charts/qorchestrator-v2/: Chart.yaml  values.yaml
helm-charts/qorchestrator-v2/templates/: _helpers.tpl  deployment.yaml
qd2_bootstrap_cli/: README.md  pyproject.toml
qd2_bootstrap_cli/.tf-build/cluster-c/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
qd2_bootstrap_cli/.tf-build/cluster-d/: terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
qd2_bootstrap_cli/.tf-build/cluster-e/: terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
qd2_bootstrap_cli/clusters/cluster-d/: kubeconfig
qd2_bootstrap_cli/clusters/cluster-e/: kubeconfig
qd2_bootstrap_cli/qd2_bootstrap.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qd2_bootstrap_cli/qd2_bootstrap/commands/: cluster.py  infra.py  quditto.py
qd2_bootstrap_cli/qd2_bootstrap/models/: quditto_deploy_spec.py
qd2_bootstrap_cli/qd2_bootstrap/utils/: helm.py  helm_set.py  mapping.py
